# moonlight

./: BENCHMARKS.md  CMakeLists.txt  COMPILE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATA.md  Doxyfile.in  README.md  RESULTS.md  SIMPLE_USAGE.md  USAGE.md
data/: CMakeLists.txt  png.tar.xz  true-type-font.tar.xz
python/: CMakeLists.txt  README.md  moonseed.py  requirements.txt  run_benchmarks.py  run_unit_tests.py  tempdir.py  util.py
python/benchmark_results/: adobe-pdf.json  microsoft-word.json  png.json  true-type-font.json  web-html.json
python/unit_tests/: unweighted_greedy01.json  unweighted_greedy02.json  unweighted_greedy03.json  unweighted_greedy04.json  unweighted_greedy05.json  unweighted_greedy06.json  unweighted_greedy08.json  unweighted_greedy09.json  unweighted_greedy10.json  unweighted_milhayes01.json  unweighted_milhayes02.json  unweighted_milhayes03.json  unweighted_milhayes04.json  unweighted_milhayes05.json  unweighted_milhayes06.json  unweighted_milhayes07.json  unweighted_milhayes08.json  unweighted_milhayes09.json  unweighted_milhayes10.json  unweighted_milhayes11.json  weighted_greedy01.json  weighted_greedy02.json  weighted_greedy03.json  weighted_greedy04.json  weighted_greedy05.json  weighted_greedy06.json  weighted_greedy07.json  weighted_greedy08.json  weighted_greedy09.json  weighted_greedy10.json  weighted_milhayes01.json  weighted_milhayes02.json  weighted_milhayes03.json  weighted_milhayes04.json  weighted_milhayes05.json  weighted_milhayes06.json  weighted_milhayes07.json  weighted_milhayes08.json  weighted_milhayes09.json  weighted_milhayes10.json
src/: CMakeLists.txt  Corpus.cpp  Corpus.h  ExemplarData.cpp  ExemplarData.h  Matrix.cpp  Matrix.h  OSCPSolver.cpp  OSCPSolver.h  Solution.cpp  Solution.h  moonlight.cpp  moonlight.h
